me parece que só está faltando o fazer uma classe wraper para o add_history

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,5 +1,6 @@
 CC = cc
 CFLAGS = -Wall -Wextra -Werror -g
+MINISHELL_DIR = ..
 SRC_DIR = ../src
 SRC_TEST_DIR = src
 OBJ_DIR = obj
@@ -8,35 +9,35 @@ LIBFT = ${LIBFT_DIR}/bin/libft.a
 # LDFLAGS =  -lreadline 
 # INCLUDE = -Iinclude -I${LIBFT_DIR}/include
 LDFLAGS = -L${LIBFT_DIR}/bin -lft -lcmocka -Wl,--wrap=readline 
-INCLUDE = -I${SRC_DIR}/include -I${LIBFT_DIR}/include -Iinclude
+INCLUDE = -I${MINISHELL_DIR}/include -I${LIBFT_DIR}/include -Iinclude
 
 SRCS = ${SRC_DIR}/minishell.c ${SRC_DIR}/get_imput.c
-SRCS += ${SRC_TEST_DIR}/test_runner.c ${SRC_TEST_DIR}/get_imput_test.c \
+TEST_SRCS = ${SRC_TEST_DIR}/test_runner.c ${SRC_TEST_DIR}/get_imput_test.c \
 		${SRC_TEST_DIR}/wrap_readline.c
 
 OBJS = ${SRCS:${SRC_DIR}/%.c=${OBJ_DIR}/%.o}
-OBJS += ${SRCS:${SRC_TEST_DIR}/%.c=${OBJ_DIR}/%.o}
+TEST_OBJS += ${TEST_SRCS:${SRC_TEST_DIR}/%.c=${OBJ_DIR}/%.o}
 
 NAME = test
 
 all: ${NAME}
 
-$(NAME): ${LIBFT} ${OBJS}
-	$(CC) ${CFLAGS} ${OBJS} ${LDFLAGS} -o ${NAME}
+$(NAME): ${LIBFT} ${OBJS} ${TEST_OBJS}
+	$(CC) ${CFLAGS} ${OBJS} ${TEST_OBJS} ${LDFLAGS} -o ${NAME}
 
 ${OBJ_DIR}/%.o: ${SRC_DIR}/%.c
 	mkdir -p $(dir $@) 
 	$(CC) $(CFLAGS) ${INCLUDE} -c $< -o $@
 
-${OBJ_DIR}/%.o: ${SRC_TESTE_DIR}/%.c
-	mkdir -p $(dir $@}
+${OBJ_DIR}/%.o: ${SRC_TEST_DIR}/%.c
+	mkdir -p $(dir $@)
 	$(CC) $(CFLAGS) ${INCLUDE} -c $< -o $@
 
 ${LIBFT}:
 	make -C ${LIBFT_DIR}
 
 clean:
-	rm -rf ${OBJ_DIR} && make -C ${LIBFT_DIR}
+	rm -rf ${OBJ_DIR} && make -C ${LIBFT_DIR} clean
 
 fclean: clean
 	rm -rf ${NAME} && rm -rf ${LIBFT}
